src/components/Header.css
.header {
  position: relative;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-wrap: wrap;
  column-gap: 1rem;
  padding: 1rem;
  grid-row: 1 / 2;
  padding: 0 10% 0 10%;
}

.header > * {
  margin-bottom: 1rem;
}

.header--link {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  margin-right: auto;
  column-gap: 1rem;
}

.logo--img {
  height: 60px;
}

.modalContainer {
  position: absolute;
  top: 20%;
  left: 20%;
  width: 70vw;
  height: 80vh;
  border-radius: 25px;
  backdrop-filter: blur(10px);
  background-color: rgba(255, 255, 255, 0.2);
  border: 1px solid white;
  padding: 2rem;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  row-gap: .5rem;
}

.modal-head{
  text-transform: uppercase;
  margin: 0;
}

.btn-close {
  width: 45px;
  height: 45px;
  background: none;
  border: 1px solid white;
  color: white;
  font-size: 35px;
  border-radius: 50%;
  cursor: pointer;
  margin-right: 1rem;
}

.hidden {
  display: none;
}

